--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <body>
     <div id="content">
       <!-- Navigation menu -->
-      <header class="navigation-menu">
-        <h1>Credipro</h1>
+      <header class="navigation-menu"> 
         <nav>
           <ul>
             <li><a href="/">Inicio</a></li>
@@ -26,53 +25,72 @@
 
       <!--Inicio-->
       <main>
-        <section id="inicio" class="hero">
-          <h2>Tu crédito, sin complicaciones</h2>
-          <p>
-            En CREDIPRO estamos para ayudarte a dar ese paso que necesitas. Solicita tu crédito de
-            nómina de forma rápida, segura y sin estrés.
-          </p>
-          <a href="#simulador" class="btn">Solicita tu crédito</a>
+        <header class="hero fullscreen">
+          <div class="place-center">
+            <h1>Credipro</h1>
+          </div>
+        </header>
+
+        <section id="inicio" class="container section-spaced">
+          <div class="section-container">
+            <h2>Tu crédito, sin complicaciones</h2>
+            <p>
+              En CREDIPRO estamos para ayudarte a dar ese paso que necesitas. Solicita tu crédito de
+              nómina de forma rápida, segura y sin estrés.
+            </p>
+            <a href="#simulador" class="button">Solicita tu crédito</a>
+          </div>
         </section>
         <!--Nosotros-->
-        <section id="nosotros">
-          <h2>¿Quiénes somos?</h2>
-          <p>
-            En <strong>CREDIPRO</strong> nos especializamos en gestionar
-            <strong>créditos de nómina para trabajadores del gobierno</strong>, brindando una
-            experiencia ágil, clara y sin complicaciones. Te acompañamos desde la asesoría inicial
-            hasta que recibes tu crédito, colaborando con instituciones financieras líderes para
-            brindarte soluciones accesibles y seguras.
-          </p>
+        <section id="nosotros" class="container section-spaced">
+          <div class="section-container">
+            <h2>¿Quiénes somos?</h2>
+            <p>
+              En <strong>CREDIPRO</strong> nos especializamos en gestionar
+              <strong>créditos de nómina para trabajadores del gobierno</strong>, brindando una
+              experiencia ágil, clara y sin complicaciones. Te acompañamos desde la asesoría inicial
+              hasta que recibes tu crédito, colaborando con instituciones financieras líderes para
+              brindarte soluciones accesibles y seguras.
+            </p>
+          </div>
         </section>
+        
         <!--cotizacion-->
-        <section id="simulador" class="simulador">
-          <h2>Solicita tu Crédito</h2>
-          <label for="monto">Monto solicitado:</label>
-          <input type="number" id="monto" placeholder="$" />
-          <label for="plazo">Plazo en meses:</label>
-          <input type="number" id="plazo" placeholder="Ej. 12" />
+        <section id="simulador" class="container section-spaced">
+          <div class="section-container">
+            <h2>Solicita tu Crédito</h2>
+            <label for="monto">Monto solicitado:</label>
+            <input type="number" id="monto" placeholder="$" />
+            <label for="plazo">Plazo en meses:</label>
+            <input type="number" id="plazo" placeholder="Ej. 12" />
 
-          <button class="btn" onclick="calcularCredito()">Calcular</button>
-          <p id="resultado"></p>
+            <button class="button" onclick="calcularCredito()">Calcular</button>
+            <p id="resultado"></p>
+          </div>
         </section>
+
         <!--Blog-->
-        <section id="blog" class="blog">
-          <h2>Blog</h2>
-          <p>
-            Próximamente encontrarás aquí artículos sobre educación financiera, consejos para
-            gestionar tu crédito y más recursos útiles.
-          </p>
+        <section id="blog" class="container section-spaced">
+          <div class="section-container">
+            <h2>Blog</h2>
+            <p>
+              Próximamente encontrarás aquí artículos sobre educación financiera, consejos para
+              gestionar tu crédito y más recursos útiles.
+            </p>
+          </div>
         </section>
+
         <!--contacto-->
-        <section id="contacto">
-          <h2>Contáctanos</h2>
-          <form>
-            <input type="text" placeholder="Nombre completo" required /><br />
-            <input type="email" placeholder="Correo electrónico" required /><br />
-            <textarea placeholder="Escríbenos tu mensaje" rows="4"></textarea><br />
-            <button class="btn" type="submit">Enviar</button>
-          </form>
+        <section id="contacto" class="container section-spaced">
+          <div class="section-container">
+            <h2>Contáctanos</h2>
+            <form>
+              <input type="text" placeholder="Nombre completo" required /><br />
+              <input type="email" placeholder="Correo electrónico" required /><br />
+              <textarea placeholder="Escríbenos tu mensaje" rows="4"></textarea><br />
+              <button class="button" type="submit">Enviar</button>
+            </form>
+          </div>
         </section>
       </main>
 
