--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="src/styles/global.css" />
     <link rel="icon" type="image/png" href="src/assets/images/CREDIPROLOGO.png" />
     <link rel="icon" type="image/x-icon" href="src/assets/images/CREDIPROLOGO.png" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="content">
       <!-- Navigation menu -->
-      <header class="navigation-menu"> 
+      <header class="navigation-menu">
         <nav>
           <ul>
             <li><a href="/">Inicio</a></li>
@@ -35,8 +36,8 @@
           <div class="section-container">
             <h2>Tu crédito, sin complicaciones</h2>
             <p>
-              En CREDIPRO estamos para ayudarte a dar ese paso que necesitas. Solicita tu crédito de
-              nómina de forma rápida, segura y sin estrés.
+              En CREDIPRO estamos para ayudarte a dar ese paso que necesitas. Solicita tu crédito de nómina de
+              forma rápida, segura y sin estrés.
             </p>
             <a href="#simulador" class="button">Solicita tu crédito</a>
           </div>
@@ -47,14 +48,14 @@
             <h2>¿Quiénes somos?</h2>
             <p>
               En <strong>CREDIPRO</strong> nos especializamos en gestionar
-              <strong>créditos de nómina para trabajadores del gobierno</strong>, brindando una
-              experiencia ágil, clara y sin complicaciones. Te acompañamos desde la asesoría inicial
-              hasta que recibes tu crédito, colaborando con instituciones financieras líderes para
-              brindarte soluciones accesibles y seguras.
+              <strong>créditos de nómina para trabajadores del gobierno</strong>, brindando una experiencia
+              ágil, clara y sin complicaciones. Te acompañamos desde la asesoría inicial hasta que recibes tu
+              crédito, colaborando con instituciones financieras líderes para brindarte soluciones accesibles
+              y seguras.
             </p>
           </div>
         </section>
-        
+
         <!--cotizacion-->
         <section id="simulador" class="container section-spaced">
           <div class="section-container">
@@ -74,8 +75,8 @@
           <div class="section-container">
             <h2>Blog</h2>
             <p>
-              Próximamente encontrarás aquí artículos sobre educación financiera, consejos para
-              gestionar tu crédito y más recursos útiles.
+              Próximamente encontrarás aquí artículos sobre educación financiera, consejos para gestionar tu
+              crédito y más recursos útiles.
             </p>
           </div>
         </section>
