--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -8,34 +8,68 @@
       <link rel="stylesheet" href="../src/styles/global.css" />
       <link rel="icon" type="image/png" href="../src/assets/images/CREDIPROLOGO.png" />
       <link rel="icon" type="image/x-icon" href="../src/assets/images/CREDIPROLOGO.png" />
+      <script src="https://cdn.tailwindcss.com"></script>
     </head>
   </head>
   <body>
     <div id="content">
       <!-- Navigation menu -->
-      <header class="navigation-menu">
-        <h1>Acerca de Nosotros</h1>
+
+      <header class="bg-[--primary] text-white text-center relative z-[10]">
         <nav>
-          <ul>
-            <li><a href="../">Inicio</a></li>
-            <li><a href="#">¿Quiénes Somos?</a></li>
-            <li><a href="../simulador">Solicita tu Crédito</a></li>
-            <li><a href="../blog">Blog</a></li>
-            <li><a href="../contacto">Contacto</a></li>
+          <ul class="h-[--header-height] flex flex-row justify-center flex-wrap">
+            <li class="my-0 mx-4">
+              <a
+                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                href="../"
+                >Inicio</a
+              >
+            </li>
+            <li class="my-0 mx-4">
+              <a
+                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                href="#"
+                >¿Quiénes Somos?</a
+              >
+            </li>
+            <li class="my-0 mx-4">
+              <a
+                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                href="../simulador"
+                >Solicita tu Crédito</a
+              >
+            </li>
+            <li class="my-0 mx-4">
+              <a
+                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                href="../blog"
+                >Blog</a
+              >
+            </li>
+            <li class="my-0 mx-4">
+              <a
+                class="text-[1.25rem] font-medium font-[montserrat-medium] uppercase text-white"
+                href="../contacto"
+                >Contacto</a
+              >
+            </li>
           </ul>
         </nav>
       </header>
 
-      <main class="about-us-main">
-        <section class="section">
+      <main>
+        <section class="bg-white">
           <div class="container-full">
-            <div class="flex-row-full">
+            <div
+              class="flex flex-row flex-no-wrap justify-between gap-y-8 items-center max-w-[1024px] mx-auto"
+            >
               <div>
-                <h2 class="title">Nuestra Misión</h2>
-                <p class="parraf">
-                  En <strong>CrediPro</strong> estamos comprometidos con brindarte una solución financiera
-                  ágil, clara y accesible. Nuestra misión es ayudarte a cumplir tus metas a través de créditos
-                  de nómina diseñados especialmente para trabajadores del gobierno.
+                <h2 class="text-[2.5rem] font-light">Nuestra Misión</h2>
+                <p class="text-[1.25rem] font-light leading-[1.5]">
+                  En <strong>CrediPro</strong> estamos comprometidos con brindarte una solución
+                  financiera ágil, clara y accesible. Nuestra misión es ayudarte a cumplir tus metas
+                  a través de créditos de nómina diseñados especialmente para trabajadores del
+                  gobierno.
                 </p>
               </div>
               <div class="picture max-w-360px">
@@ -45,16 +79,18 @@
           </div>
         </section>
 
-        <section class="section">
+        <section class="bg-slate-100">
           <div class="container-full">
-            <div class="flex-row-full reversed">
+            <div
+              class="flex flex-row-reverse flex-no-wrap justify-between gap-y-8 items-center max-w-[1024px] mx-auto"
+            >
               <div>
-                <h2 class="title">¿Qué hacemos?</h2>
-                <p class="parraf">
-                  Gestionamos tu crédito desde el inicio hasta que lo recibes. Te asesoramos personalmente y
-                  nos encargamos de los trámites para que tú te enfoques en lo que realmente importa.
-                  Colaboramos con instituciones financieras de prestigio para garantizarte opciones confiables
-                  y competitivas.
+                <h2 class="text-[2.5rem] font-light">¿Qué hacemos?</h2>
+                <p class="text-[1.25rem] font-light leading-[1.5]">
+                  Gestionamos tu crédito desde el inicio hasta que lo recibes. Te asesoramos
+                  personalmente y nos encargamos de los trámites para que tú te enfoques en lo que
+                  realmente importa. Colaboramos con instituciones financieras de prestigio para
+                  garantizarte opciones confiables y competitivas.
                 </p>
               </div>
               <div class="picture max-w-360px">
@@ -64,27 +100,31 @@
           </div>
         </section>
 
-        <section class="section">
+        <section class="bg-white">
           <div class="container-full">
-            <div class="flex-row-full">
+            <div
+              class="flex flex-row flex-no-wrap justify-between gap-y-8 items-center max-w-[1024px] mx-auto"
+            >
               <div>
-                <h2 class="title">Nuestros Valores</h2>
+                <h2 class="text-[2.5rem] font-light">Nuestros Valores</h2>
                 <ul>
                   <li>
-                    <p class="parraf"><strong>Transparencia:</strong> te explicamos todo con claridad.</p>
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
+                      <strong>Transparencia:</strong> te explicamos todo con claridad.
+                    </p>
                   </li>
                   <li>
-                    <p class="parraf">
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
                       <strong>Confianza:</strong> protegemos tu información y tus intereses.
                     </p>
                   </li>
                   <li>
-                    <p class="parraf">
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
                       <strong>Agilidad:</strong> gestionamos tu crédito sin demoras innecesarias.
                     </p>
                   </li>
                   <li>
-                    <p class="parraf">
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
                       <strong>Compromiso:</strong> estamos contigo en cada paso del proceso.
                     </p>
                   </li>
@@ -97,15 +137,17 @@
           </div>
         </section>
 
-        <section class="section">
+        <section class="bg-slate-100">
           <div class="container-full">
-            <div class="flex-row-full reversed">
+            <div
+              class="flex flex-row-reverse flex-no-wrap justify-between gap-y-8 items-center max-w-[1024px] mx-auto"
+            >
               <div>
-                <h2 class="title">¿A quién ayudamos?</h2>
-                <p class="parraf">
+                <h2 class="text-[2.5rem] font-light">¿A quién ayudamos?</h2>
+                <p class="text-[1.25rem] font-light leading-[1.5]">
                   Nos enfocamos en apoyar a
-                  <strong>trabajadores del gobierno</strong> que buscan una opción de financiamiento sin
-                  complicaciones. Entendemos sus necesidades y diseñamos soluciones a su medida.
+                  <strong>trabajadores del gobierno</strong> que buscan una opción de financiamiento
+                  sin complicaciones. Entendemos sus necesidades y diseñamos soluciones a su medida.
                 </p>
               </div>
               <div class="picture max-w-360px">
@@ -115,22 +157,33 @@
           </div>
         </section>
 
-        <section class="section">
+        <section class="bg-white">
           <div class="container-full">
-            <div class="flex-row-full">
+            <div
+              class="flex flex-row flex-no-wrap justify-between gap-y-8 items-center max-w-[1024px] mx-auto"
+            >
               <div>
-                <h2 class="title">¿Por qué elegir Credipro?</h2>
+                <h2 class="text-[2.5rem] font-light">¿Por qué elegir Credipro?</h2>
                 <ul>
-                  <li><p class="parraf">Te brindamos atención personalizada y cercana.</p></li>
-                  <li><p class="parraf">Trabajamos con rapidez y responsabilidad.</p></li>
                   <li>
-                    <p class="parraf">
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
+                      Te brindamos atención personalizada y cercana.
+                    </p>
+                  </li>
+                  <li>
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
+                      Trabajamos con rapidez y responsabilidad.
+                    </p>
+                  </li>
+                  <li>
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
                       Accedes a productos financieros respaldados por instituciones confiables.
                     </p>
                   </li>
                   <li>
-                    <p class="parraf">
-                      No estás solo: te acompañamos desde el primer contacto hasta que recibes tu crédito.
+                    <p class="text-[1.25rem] font-light leading-[1.5]">
+                      No estás solo: te acompañamos desde el primer contacto hasta que recibes tu
+                      crédito.
                     </p>
                   </li>
                 </ul>
@@ -144,7 +197,7 @@
       </main>
 
       <!--Footer-->
-      <footer>
+      <footer class="bg-[--primary] text-white text-center p-4">
         <p id="copyright"></p>
       </footer>
     </div>
